# Entity-Linking-Agent

./: .gitignore  LICENSE  README.md  pyproject.toml
src/: main.py
src/application/use_cases/: entity_linking_uc.py
src/config/: knowledge_bases.example.json  settings.py
src/domain/: entities.py  interfaces.py  value_objects.py
src/infrastructure/: __init__.py
src/infrastructure/knowledge_bases/: __init__.py  alligator_gateway.py  geonames_gateway.py  lamapi_gateway.py  sparql_gateway.py
src/infrastructure/llm/: llm_service.py
src/infrastructure/monitoring/: __init__.py  agent_monitor.py
src/infrastructure/tools/: column_tools.py  disambiguation_tools.py
src/interface/: schemas.py
src/interface/agents/: __init__.py  candidate_retriever_agent.py  column_analyst_agent.py  disambiguation_agent.py  planning_agent.py  supervisor_agent.py
src/static/: index.html
