[project]
name = "entity-linking-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104.1,<0.116",
    "uvicorn>=0.24.0,<0.32",
    "langgraph>=0.6.0,<0.7",
    "langchain>=0.2.0,<0.4",
    "langchain-openai>=0.1.0,<0.3",
    "langchain-core>=0.2.38,<0.4",
    "openai>=1.3.0,<2.0",
    "pydantic>=2.7.4,<3.0",
    "requests>=2.31.0,<3.0",
    "tenacity>=8.2.3,<9.0",
    "python-multipart>=0.0.6,<1.0",
    "python-dotenv>=1.0.0,<2.0",
    "sentence-transformers>=2.2.2,<3.0",
    "numpy>=1.26,<2.0",
    "pydantic-settings>=2.0.0,<3.0",
    "pandas>=2.0,<3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
    "flake8>=6.0.0",
]